# memora

./: .gitignore  CONTRIBUTING.md  MAINTAINERS.md  Makefile.cbm  README.md  SECURITY.md  flake.nix  glama.json  install.ps1  install.sh  server.json
.github/: CODEOWNERS  label-actions.yml
docs/: BENCHMARK.md  CONFIGURATION.md  EVALUATION_PLAN.md  SECURITY-DISCLOSURE.md  index.html  llms.txt  robots.txt  sitemap.xml
graph-ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
pkg/pypi/: README.md  pyproject.toml
pkg/pypi/src/memora_mcp/: __init__.py  _cli.py
scripts/: benchmark-search-graph.sh  build.sh  gen-third-party-notices.sh  license-gate.sh  security-allowlist.txt  security-install.sh  security-strings.sh  setup-windows.ps1  setup.sh  smoke-invariants.sh  smoke-test.sh  soak-test.sh  test-windows.ps1  test.sh  test_mcp_rapid_init.py
src/: main.c
test-infrastructure/: docker-compose.yml
tests/: scale_contract.sh  smoke_guard.sh  test_agent_clients.c  test_agent_profiles.c  test_artifact.c  test_cli.c  test_config_json_like.c  test_config_text_edit.c  test_config_toml_edit.c  test_config_yaml_edit.c  test_convergence_probe.c  test_cpp_index_hang.sh  test_edge_imports.c  test_edge_structural.c  test_edge_types_probe.c  test_grammar_probe_a.c  test_grammar_probe_b.c  test_grammar_probe_c.c  test_grammar_probe_d.c  test_grammar_probe_e.c  test_grammar_probe_f.c  test_grammar_probe_g.c  test_httpd.c  test_incremental.c  test_index_resilience.c  test_integration.c  test_lang_contract.c  test_lsp_resolution_probe.c  test_main.c  (+11 more)
(+91 files in other folders)
