[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memora-mcp"
version = "0.8.1"
description = "Memora MCP — fork of codebase-memory-mcp, code intelligence engine for AI coding agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["mcp", "claude", "code-intelligence", "codebase", "memory", "ai", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/TakaraDasein/memora"
Repository = "https://github.com/TakaraDasein/memora"
Issues = "https://github.com/TakaraDasein/memora/issues"

[project.scripts]
memora-mcp = "memora_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/memora_mcp"]
